--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,15 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="CustomButtonStyle">
+        <item name="android:layout_width">118dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@color/buttonColor</item> <!-- 색상 리소스 참조 -->
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
 
     <style name="defaultButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorAccent">@color/colorAccent</item>
