--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,19 +62,30 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="413dp"
-        android:layout_height="52dp"
+        android:layout_width="244dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="100dp"
         android:gravity="center"
-        android:text="환영합니다"
-        android:textSize="40dp"
-        android:textColor="#FFFFFF"
-        android:background="#2196F3"
-        android:backgroundTint="#2196F3"
+        android:text="슬기로운 회사생활"
+        android:textColor="#014750"
+        android:textSize="30dp"
+        android:fontFamily="serif"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="667dp"
+        android:layout_height="377dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
