--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -69,6 +69,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="카풀 신청하기" />
+    <Button
+        android:id="@+id/viewApplicationsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/applyButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="카풀 신청 인원 확인하기" />
+
 
 
 </RelativeLayout>
